--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.3.3",
     "daisyui": "^2.50.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
