--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.9",
+    "@mui/x-data-grid": "^5.17.24",
     "axios": "^1.3.3",
     "daisyui": "^2.50.1",
     "react": "^18.2.0",
