--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-data-grid": "^5.17.24",
     "axios": "^1.3.3",
     "daisyui": "^2.50.1",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.4.2"
